--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,13 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">About Me</a>
+                            <a class="nav-link" href="https://barryriveroll.github.io/Bootstrap-Portfolio/index.html">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            <a class="nav-link" href="https://barryriveroll.github.io/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="https://barryriveroll.github.io/Bootstrap-Portfolio/contact.html">Contact <span class="sr-only">(current)</span></a>
                         </li>
                         </ul>
                     </div>
