Update bootstrap classes on index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="col-md-12">
                     <h2>About Me</h2>
                     <hr>
-                    <img class="image-me" src="https://via.placeholder.com/200x150" alt="My image">
+                    <img class="image-me img-fluid" src="https://via.placeholder.com/200x150" alt="My image">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque assumenda, nisi autem, 
                         laudantium dolorum, libero facilis quod quasi modi deleniti placeat corporis pariatur. 
                         Quaerat autem rerum optio cumque labore reiciendis?</p>
